--- a/Registration Form/Registration Form.html
+++ b/Registration Form/Registration Form.html
@@ -57,7 +57,7 @@
     </div>
     <footer>
         <p class="text-footer">
-            Copyright @ 2027 www.iotalliancesrm.com- All rights reserved
+            Copyright @ 2027 www.iotalliance.srm.com- All rights reserved
         </p>
     </footer>
 </body>
